@@ -12,6 +12,7 @@ INCLUDES = \
 	@NOTIFY_CFLAGS@ \
 	@SQLITE_CFLAGS@ \
 	@X11_CFLAGS@ \
+	@APP_INDICATOR_CFLAGS@ \
 	-I$(top_srcdir)/lib/chardetect/include
 AM_CPPFLAGS = \
 	-DDATADIR='"$(datadir)"' \
@@ -28,6 +29,7 @@ LDADD = \
 	@NOTIFY_LIBS@ \
 	@SQLITE_LIBS@ \
 	@X11_LIBS@ \
+	@APP_INDICATOR_LIBS@ \
 	$(top_srcdir)/lib/chardetect/chardetect.a \
 	-lstdc++
 
